--- a/src/WidgetFrame.css
+++ b/src/WidgetFrame.css
@@ -18,5 +18,9 @@
     white-space: nowrap;
 }
 .widget-frame-header .close {
+    font-size: 18px;
+    padding: 0px;
+    border: none;
+    background: none;
     float: right;
 }
