--- a/src/AddPeople.css
+++ b/src/AddPeople.css
@@ -1,7 +1,7 @@
 .AddPeople {
     margin: 20px;
     padding: 20px;
-    border: 2px solid #00FFD8;
-    background: #DFE;
+    border: 2px solid #ff8080;
+    background: #ffb3b3;
     text-align: center;
 }
