--- a/src/DashboardLayout.css
+++ b/src/DashboardLayout.css
@@ -5,7 +5,7 @@
     margin: 20px;
     padding: 20px;
     border: 2px solid #ff9999;
-    background: #ffd9cc;
+    background: #f38d8d;
 }
 .DashboardLayout.container {
     align-self: stretch;
