--- a/src/AddWidget.css
+++ b/src/AddWidget.css
@@ -1,7 +1,7 @@
 .add-widget {
 	margin: 10px;
 	padding: 20px;
-	border: 1px solid #ff8080;
-    background: #ffb3b3;
+    border: 2px solid #ff999;
+    background: #e46161;
     text-align: center;
 }
