--- a/src/AddPeople.css
+++ b/src/AddPeople.css
@@ -1,7 +1,7 @@
 .AddPeople {
     margin: 20px;
     padding: 20px;
-    border: 2px solid #ff999;
-    background: #e46161;
+    border: 2px solid #555;
+    background: #FFFE90;
     text-align: center;
 }
