--- a/src/DashboardLayout.css
+++ b/src/DashboardLayout.css
@@ -4,8 +4,8 @@
     align-items: center;
     margin: 20px;
     padding: 20px;
-    border: 2px solid #ff9999;
-    background: #f38d8d;
+    border: 2px solid #0F46FF;
+    background: #80D0FF;
 }
 .DashboardLayout.container {
     align-self: stretch;
