--- a/src/AddWidget.css
+++ b/src/AddWidget.css
@@ -1,7 +1,7 @@
 .add-widget-box {
 	margin: 10px;
 	padding: 20px;
-    border: 2px solid #ff999;
-    background: #e46161;
+    border: 2px solid #555;
+    background: #FFFE90;
     text-align: center;
 }
