--- a/src/HelloWidget.css
+++ b/src/HelloWidget.css
@@ -1,7 +1,7 @@
 .HelloWidget {
-    border: 2px solid black;
+    border: 2px solid #555;
     text-align: center;
-    background: #f5f5f5;
+    background: #FFFE90;
     color: #333;
     margin: 20px;
     padding: 20px;
